--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
 </head>
 <body>
   <h1>Ce est le site de mon restaurant !</h1>
+<H2>Le menu</H2>
+   <ul>
+    <li>Harengs pommes à l'huile</li>
+    <li>Blanquette de veau</li>
+    <li>TODO : trouver un dessert</li>
+  </ul>
 </body>
 </html>
